@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,14 +20,6 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-import java.security.AccessController;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.PrivilegedAction;
-import java.security.ProtectionDomain;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -38,28 +30,22 @@ import java.util.Queue;
 import java.util.ResourceBundle;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
 import java.lang.System.LoggerFinder;
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
-import java.security.AccessControlException;
-import java.util.stream.Stream;
 import sun.util.logging.PlatformLogger;
 
 /**
  * @test
- * @bug     8140364
+ * @bug 8140364
  * @summary JDK implementation specific unit test for JDK internal API.
  *   Tests a naive implementation of System.Logger, and in particular
  *   the default mapping provided by PlatformLogger.
  * @modules java.base/sun.util.logging
  * @build CustomSystemClassLoader BaseLoggerFinder BasePlatformLoggerTest
- * @run  main/othervm -Djava.system.class.loader=CustomSystemClassLoader BasePlatformLoggerTest NOSECURITY
- * @run  main/othervm -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader BasePlatformLoggerTest NOPERMISSIONS
- * @run  main/othervm -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader BasePlatformLoggerTest WITHPERMISSIONS
- * @author danielfuchs
+ * @run main/othervm -Djava.system.class.loader=CustomSystemClassLoader BasePlatformLoggerTest
  */
 public class BasePlatformLoggerTest {
 
@@ -68,25 +54,6 @@ public class BasePlatformLoggerTest {
 
     final static AtomicLong sequencer = new AtomicLong();
     final static boolean VERBOSE = false;
-    static final ThreadLocal<AtomicBoolean> allowControl = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-    static final ThreadLocal<AtomicBoolean> allowAccess = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-    static final ThreadLocal<AtomicBoolean> allowAll = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-
     static final Class<?> providerClass;
     static {
         try {
@@ -331,107 +298,27 @@ public class BasePlatformLoggerTest {
     }
 
     static PlatformLogger getPlatformLogger(String name) {
-        boolean old = allowAccess.get().get();
-        allowAccess.get().set(true);
-        try {
-            return PlatformLogger.getLogger(name);
-        } finally {
-            allowAccess.get().set(old);
-        }
-    }
-
-    static enum TestCases {NOSECURITY, NOPERMISSIONS, WITHPERMISSIONS};
-
-    static void setSecurityManager() {
-        if (System.getSecurityManager() == null) {
-            Policy.setPolicy(new SimplePolicy(allowControl, allowAccess, allowAll));
-            System.setSecurityManager(new SecurityManager());
-        }
+        return PlatformLogger.getLogger(name);
     }
 
     public static void main(String[] args) {
-        if (args.length == 0)
-            args = new String[] {
-                "NOSECURITY",
-                "NOPERMISSIONS",
-                "WITHPERMISSIONS"
-            };
-
-
-        Stream.of(args).map(TestCases::valueOf).forEach((testCase) -> {
-            TestLoggerFinder provider;
-            switch (testCase) {
-                case NOSECURITY:
-                    System.out.println("\n*** Without Security Manager\n");
-                    provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                    test(provider, true);
-                    System.out.println("Tetscase count: " + sequencer.get());
-                    break;
-                case NOPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, without permissions\n");
-                    setSecurityManager();
-                    try {
-                        provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        throw new RuntimeException("Expected exception not raised");
-                    } catch (AccessControlException x) {
-                        if (!LOGGERFINDER_PERMISSION.equals(x.getPermission())) {
-                            throw new RuntimeException("Unexpected permission check", x);
-                        }
-                        final boolean control = allowControl.get().get();
-                        try {
-                            allowControl.get().set(true);
-                            provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        } finally {
-                            allowControl.get().set(control);
-                        }
-                    }
-                    test(provider, false);
-                    System.out.println("Tetscase count: " + sequencer.get());
-                    break;
-                case WITHPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, with control permission\n");
-                    setSecurityManager();
-                    final boolean control = allowControl.get().get();
-                    try {
-                        allowControl.get().set(true);
-                        provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        test(provider, true);
-                    } finally {
-                        allowControl.get().set(control);
-                    }
-                    break;
-                default:
-                    throw new RuntimeException("Unknown test case: " + testCase);
-            }
-        });
+        System.out.println("\n*** Running test\n");
+        TestLoggerFinder provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
+        test(provider);
+        System.out.println("Tetscase count: " + sequencer.get());
         System.out.println("\nPASSED: Tested " + sequencer.get() + " cases.");
     }
 
-    public static void test(TestLoggerFinder provider, boolean hasRequiredPermissions) {
+    public static void test(TestLoggerFinder provider) {
 
         final Map<PlatformLogger, String> loggerDescMap = new HashMap<>();
 
-        TestLoggerFinder.LoggerImpl appSink;
-        boolean before = allowControl.get().get();
-        try {
-            allowControl.get().set(true);
-            appSink = TestLoggerFinder.LoggerImpl.class.cast(
+        TestLoggerFinder.LoggerImpl appSink = TestLoggerFinder.LoggerImpl.class.cast(
                         provider.getLogger("foo", BasePlatformLoggerTest.class.getModule()));
-        } finally {
-            allowControl.get().set(before);
-        }
 
-        TestLoggerFinder.LoggerImpl sysSink = null;
-        before = allowControl.get().get();
-        try {
-            allowControl.get().set(true);
-            sysSink = TestLoggerFinder.LoggerImpl.class.cast(
+        TestLoggerFinder.LoggerImpl sysSink = TestLoggerFinder.LoggerImpl.class.cast(
                         provider.getLogger("foo", Thread.class.getModule()));
-        } finally {
-            allowControl.get().set(before);
-        }
-
-        if (hasRequiredPermissions && appSink == sysSink) {
+        if (appSink == sysSink) {
             throw new RuntimeException("identical loggers");
         }
 
@@ -441,10 +328,10 @@ public class BasePlatformLoggerTest {
         if (!provider.user.contains(appSink)) {
             throw new RuntimeException("app logger not in appplication map");
         }
-        if (hasRequiredPermissions && provider.user.contains(sysSink)) {
+        if (provider.user.contains(sysSink)) {
             throw new RuntimeException("sys logger in appplication map");
         }
-        if (hasRequiredPermissions && !provider.system.contains(sysSink)) {
+        if (!provider.system.contains(sysSink)) {
             throw new RuntimeException("sys logger not in system map");
         }
 
@@ -628,91 +515,6 @@ public class BasePlatformLoggerTest {
                     checkLogEvent(provider, desc2, expected);
                 }
             }
-        }
-
-    }
-
-    final static class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    public static class SimplePolicy extends Policy {
-        final static RuntimePermission CONTROL = LOGGERFINDER_PERMISSION;
-        final static RuntimePermission ACCESS_LOGGING = new RuntimePermission("accessClassInPackage.sun.util.logging");
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final Permissions allPermissions;
-        final ThreadLocal<AtomicBoolean> allowControl;
-        final ThreadLocal<AtomicBoolean> allowAccess;
-        final ThreadLocal<AtomicBoolean> allowAll;
-        public SimplePolicy(ThreadLocal<AtomicBoolean> allowControl,
-                ThreadLocal<AtomicBoolean> allowAccess,
-                ThreadLocal<AtomicBoolean> allowAll) {
-            this.allowControl = allowControl;
-            this.allowAccess = allowAccess;
-            this.allowAll = allowAll;
-            permissions = new Permissions();
-            allPermissions = new PermissionsBuilder()
-                    .add(new java.security.AllPermission())
-                    .toPermissions();
-        }
-
-        Permissions getPermissions() {
-            if (allowControl.get().get() || allowAccess.get().get() || allowAll.get().get()) {
-                PermissionsBuilder builder =  new PermissionsBuilder()
-                        .addAll(permissions);
-                if (allowControl.get().get()) {
-                    builder.add(CONTROL);
-                }
-                if (allowAccess.get().get()) {
-                    builder.add(ACCESS_LOGGING);
-                }
-                if (allowAll.get().get()) {
-                    builder.addAll(allPermissions);
-                }
-                return builder.toPermissions();
-            }
-            return permissions;
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            return getPermissions().implies(permission) || DEFAULT_POLICY.implies(domain, permission);
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
         }
     }
 }
